# Pipeline

./: CMakeLists.txt  README.md  main.cpp
Common/: CMakeLists.txt  TomlUtil.cpp  TomlUtil.hpp
Consumer/: CMakeLists.txt  ConsumerMain.cpp  ConsumerMain.hpp  ImageConsumerModule.cpp  ImageConsumerModule.hpp
Master/: CMakeLists.txt  Master.cpp  Master.hpp  ProcessHandler.cpp  ProcessHandler.hpp
Processor/: CMakeLists.txt  ExampleProcessorModule.cpp  ExampleProcessorModule.hpp  OpencvYoloModule.cpp  OpencvYoloModule.hpp  ProcessorMain.cpp  ProcessorMain.hpp
Producer/: CMakeLists.txt  DrawBoxesModule.cpp  DrawBoxesModule.hpp  ImageProducerModule.cpp  ImageProducerModule.hpp  ProducerMain.cpp  ProducerMain.hpp
Proto/: CMakeLists.txt  DataMessage.proto
configs/: default.toml
scripts/: setup.sh
