set(SOURCES Master.cpp ProcessHandler.cpp)
add_library(Master STATIC ${SOURCES})
target_include_directories(Master PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(Master PUBLIC Common)
#target_link_libraries(Master PUBLIC Consumer)
#target_link_libraries(Master PUBLIC Processor)
#target_link_libraries(Master PUBLIC Producer)
